JDK17 upgrade (#181)
Upgrades the project to jdk 17